# SpaceMind-rs

./: Cargo.toml  Dioxus.toml  README.md  dogs.txt  hotdog.db
assets/: main.css
src/: backend.rs  guide_backend.rs  guide_new_app.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
